--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
+    "mongoose": "^8.2.4",
     "openai": "^4.29.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
